--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ouray &amp; Telluride</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-[url(/via.webp)] bg-center bg-cover bg-no-repeat">
+    <div id="root" class="h-screen"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
