--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ouray &amp; Telluride</title>
   </head>
-  <body class="bg-[url(/via.webp)] bg-center bg-cover bg-no-repeat">
+  <body class="bg-[url(/via.webp)] bg-center bg-cover bg-no-repeat bg-fixed">
     <div id="root" class="h-screen"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
