--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/climber.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ouray and Telluride Trip">
+    <link rel="icon" href="/favicon.ico" sizes="48x48">
+    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png">
+    <link rel="mask-icon" href="/maskable-icon-512x512.png" color="#FFFFFF">
+    <meta name="theme-color" content="#ffffff">
     <title>Ouray &amp; Telluride</title>
   </head>
   <body class="bg-[url(/via.webp)] bg-center bg-cover bg-no-repeat bg-fixed">
